fixing z-index issues on components page

--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ img{
     position: sticky;
     margin-bottom: 0;
     top: 0rem;
-    z-index: 10;
+    z-index: 11;
     margin-top: 50px;
     text-align: left;
 }
@@ -410,13 +410,10 @@ a:link .button__support {
   height: 50px;
   overflow: hidden;
   position: relative;
-  z-index: 0;
 }
 .nav__wrapper{
     position: relative;
-    z-index: 1;
     width: 100%;
-
     max-width: 75rem;
     margin: auto;
     padding: 0 1.5rem;
@@ -550,7 +547,7 @@ a:link .button__support {
 .component-page .component__name {
   position: sticky;
   top: 2rem;
-  z-index: 1;
+  z-index: 10;
 }
 
 .component__code:before,
@@ -563,9 +560,9 @@ a:link .button__support {
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 9;
-  background: var(--light-gray);
-  color: var(--dark-gray);
+  z-index: 1;
+  background: salmon;
+  color: var(--#fff);
 }
 
 .component__img:before {
